--- a/index.html
+++ b/index.html
@@ -1,84 +1,110 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <a href="/">
-                WebStudio
-            </a>
-            <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
-            </ul>
-        </nav>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+      <nav>
+        <a href="./index.html"> WebStudio </a>
+        <ul>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
-        </section>
-        <section>
-            <ul>
-                <li>
-                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                </li>
-                <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                </li>
-                <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p> Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
-            <section>
-                <h2>Чим ми займаємося</h2>
-                    <img src="/images/img.jpg" alt="Розробка сайтів" width="370" height="294">
-                    <img src="/images/img2.jpg" alt="Розробка мобільних додотків" width="370" height="294">
-                    <img src="/images/img3.jpg" alt="Дизайн" width="370" height="294">
-            </section>
-            <section>  
-                <h2>Наша команда</h2>
-                    <img src="/images/photo.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-                        <h4>Ігор Дем'яненко</h4>
-                            <p>Product Designer</p>
-                    <img src="/images/photo2.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                        <h4>Ольга Рєпіна</h4>
-                            <p>Frontend Developer</p>
-                    <img src="/images/photo3.jpg" alt="Микола Тарасов" width="270" height="260">
-                        <h4>Микола Тарасов</h4> 
-                            <p>Marketing</p>
-                    <img src="/images/photo4.jpg" alt="Михайло Єрмаков" width="270" height="260">
-                        <h4>Михайло Єрмаков</h4>
-                            <p>UI Designer</p>
-            </section>
-        </section>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
+        <h2>Переваги</h2>
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li><img src="./images/img.jpg" alt="Розробка сайтів" width="370" height="294" /></li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="Розробка мобільних додотків"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li><img src="./images/img3.jpg" alt="Дизайн" width="370" height="294" /></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/photo.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+            <h4>Ігор Дем'яненко</h4>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/photo2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+            <h4>Ольга Рєпіна</h4>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/photo3.jpg" alt="Микола Тарасов" width="270" height="260" />
+            <h4>Микола Тарасов</h4>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/photo4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+            <h4>Михайло Єрмаков</h4>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-        <a href="/">
-            WebStudio
-        </a>
-        <address>м. Київ, пр-т Лесі Українки, 26</address>
+      <a href="./index.html"> WebStudio </a>
+      <address>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tell:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/ZRvkavTw73zCxfT99"
+              target="_blank"
+              rel="noopener nofollow "
+            >
+              м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+      </address>
     </footer>
-</body>
+  </body>
 </html>
